# bobnet

./: .gitignore  CHANGELOG.md  Cargo.toml  Procfile  README.md  RustConfig  app.json  consent.csv  mermaid.md  requirements.txt  testemail.eml
.cursor/rules/: developer_general_principals.mdc  plan.mdc
app/: config.py  logging.py  models.py  queue.py  web.py  worker.py  worker_entry.py
app/simulate/: clickers.py  html_parse.py  openers.py
app/utils/: email_parse.py  idempotency.py  mailgun_signature.py  user_agents.py
docs/: email-simulator-prd.md  plan.md
rust-worker/: Cargo.toml  RustConfig
rust-worker/src/: config.rs  consumer.rs  lib.rs  main.rs  processor.rs
rust-worker/src/html/: mod.rs  parser.rs  types.rs
rust-worker/src/process/: cloudflare.rs  email_parser.rs  mailgun.rs  mod.rs
rust-worker/src/queue/: mod.rs  publisher.rs  types.rs
rust-worker/src/simulate/: clicker.rs  mod.rs  opener.rs
rust-worker/src/util/: mod.rs  user_agent.rs
rust-worker/src/web/: handlers.rs  mod.rs  signature.rs
test/: comet-atlas.html
tests/integration/: test_click_simulation_overrides.py  test_cloudflare_webhook.py  test_mailgun_webhook.py  test_webhook_enqueue.py
tests/unit/: test_clickers.py  test_html_parse.py  test_mailgun_signature.py  test_plus_tag.py
