[package]
name = "bobnet-worker"
version = "0.1.0"
edition = "2021"
description = "High-performance async RabbitMQ worker for email simulation"
authors = ["BobNet Team"]

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rand = "0.8"
futures = "0.3"
url = "2"
thiserror = "1"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
