[package]
name = "bobnet-worker"
version = "0.1.0"
edition = "2021"
description = "High-performance async RabbitMQ worker for email simulation"
authors = ["BobNet Team"]

[lib]
name = "bobnet"
path = "src/lib.rs"

[[bin]]
name = "bobnet-worker"
path = "src/main.rs"

[[bin]]
name = "bobnet-web"
path = "src/bin/web.rs"

[[bin]]
name = "bobnet-processor"
path = "src/bin/processor.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rand = "0.8"
futures = "0.3"
url = "2"
thiserror = "1"
anyhow = "1"

# Web server dependencies
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }

# Email parsing
mailparse = "0.14"

# Cryptography for signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
